Add: Python Replacement

--- a/Python_Notebooks/PDF Signature Inserter.ipynb
+++ b/Python_Notebooks/PDF Signature Inserter.ipynb
@@ -24,12 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "bcd2ae32",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-07T16:47:47.549444Z",
-     "start_time": "2021-06-07T16:47:47.541447Z"
+     "end_time": "2021-06-07T16:58:38.220338Z",
+     "start_time": "2021-06-07T16:58:38.202282Z"
     }
    },
    "outputs": [],
@@ -50,12 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "7c2e31f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-07T16:47:48.035747Z",
-     "start_time": "2021-06-07T16:47:48.025750Z"
+     "end_time": "2021-06-07T16:58:38.797003Z",
+     "start_time": "2021-06-07T16:58:38.786006Z"
     }
    },
    "outputs": [],
@@ -86,12 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "03aec05d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-07T16:47:48.949177Z",
-     "start_time": "2021-06-07T16:47:48.937181Z"
+     "end_time": "2021-06-07T16:58:42.607359Z",
+     "start_time": "2021-06-07T16:58:42.594346Z"
     }
    },
    "outputs": [],
@@ -134,12 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "1d793de2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-07T16:47:50.170053Z",
-     "start_time": "2021-06-07T16:47:50.145888Z"
+     "end_time": "2021-06-07T16:58:43.726204Z",
+     "start_time": "2021-06-07T16:58:43.698169Z"
     }
    },
    "outputs": [],
@@ -174,9 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dc12eccc",
-   "metadata": {},
+   "execution_count": 17,
+   "id": "c22c4375",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-07T16:58:44.905186Z",
+     "start_time": "2021-06-07T16:58:44.899225Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def run_signature():\n",
@@ -205,16 +210,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f9134033",
+   "execution_count": 19,
+   "id": "c001de48",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-07T16:47:54.811749Z",
-     "start_time": "2021-06-07T16:47:50.945755Z"
+     "end_time": "2021-06-07T16:59:12.211200Z",
+     "start_time": "2021-06-07T16:59:07.986225Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finish\n",
+      "Finish\n",
+      "Finish\n",
+      "Finish\n",
+      "File saved as signed_form.pdf in the main directory :) \n"
+     ]
+    }
+   ],
    "source": [
+    "run_signature()\n",
     "clean_all()"
    ]
   }
